# Financial-Document-Management-with-Semantic-Analysis

./: auth.py  chat.py  database.py  dependencies.py  documents.py  financial.db  main.py  models.py  pyproject.toml  rbac.py  requirements.txt  user_roles.py
qdrant_data/: meta.json
qdrant_data/collection/financial_docs/: storage.sqlite
rag/: load_chunk.py  pipeline.py  qdrant_db.py  reranking.py  router.py
static/: dashboard.css  dashboard.js  role_assign.css  role_assign.js  script.js  style.css
templates/: dashboard.html  login.html  register.html  role_assign.html
