[project]
name = "nimap-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi",
    "fastapi==0.115.0",
    "jinja2==3.1.6",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "langchain-huggingface==1.2.1",
    "passlib[bcrypt]==1.7.4",
    "pypdf==4.0.2",
    "python-docx==1.1.0",
    "python-jose==3.3.0",
    "python-multipart==0.0.22",
    "qdrant-client==1.12.0",
    "sentence-transformers==3.0.1",
    "sqlalchemy==2.0.48",
    "torch==2.5.0",
    "transformers",
    "uvicorn==0.30.0",
]
